service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld-svc
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
    deploymentconfig: helloworld
  sessionAffinity: None
  type: ClusterIP
