route.yaml
apiVersion: v1
kind: Route
metadata:
  name: helloworld-route
spec:
  to:
    kind: Service
    name: helloworld-svc
